# linorobot2_wms

linorobot2_base/config/: ekf.yaml
linorobot2_bringup/launch/: bringup.launch.py
linorobot2_description/urdf/controllers/: diff_drive.urdf.xacro  omni_drive.urdf.xacro  skid_steer.urdf.xacro
linorobot2_gazebo/: CMakeLists.txt
linorobot2_gazebo/launch/: gazebo.launch.py
linorobot2_my_c_pkg/: CMakeLists.txt  Readme.md  package.xml
linorobot2_my_c_pkg/launch/: my_nav2_example.launch.py
myautomapping/: package.xml  setup.cfg  setup.py
myautomapping/launch/: automapping2.launch.py
myautomapping/myautomapping/: MappingGoal.py
wms_interfaces/: CMakeLists.txt  package.xml
wms_interfaces/action/: Discover.action
wms_navigation/: CMakeLists.txt  README.md  package.xml
wms_navigation/config/: discovery_setting.yaml  nav2_lino.yaml  nav2_tst.yaml  navigate_to_position_w_replanning_and_recovery.xml  navigation.yaml  slam_subscriber.yaml
wms_navigation/launch/: wms_gazebo.launch.py  wms_gazebo_chair.launch.py  wms_navigation.launch.py  wms_slam.launch.py
wms_navigation/maps/: wms.pgm  wms.yaml  wms2.pgm  wms2.yaml
wms_navigation/scripts/: robot_navigator_tst.py  waypoint_follower_tst.py
wms_navigation/wms_navigation/: discovery_server.py  map_analyzer.py  slam_subscriber.py
wms_navigation/worlds/: wms.world  wms_chair.world
